# indoor-air-quality-monitoring-system

./: .gitignore  README.md
client_node1/: CMakeLists.txt  Kconfig  prj.conf
client_node1/boards/: nrf52840dk_nrf52840.overlay
client_node1/src/: main.c
client_node2/: CMakeLists.txt  prj.conf
client_node2/boards/: nrf52840dk_nrf52840.overlay
client_node2/drivers/sensor/: CMakeLists.txt  Kconfig
client_node2/drivers/sensor/sensirion_lib/: sensirion_i2c.c
client_node2/drivers/sensor/sps30/: CMakeLists.txt  Kconfig  sps30.c  sps30.h
client_node2/src/: main.c
data_visualization/: app.py  new_sensor_data.xlsx  requirements.txt  sensor_data.xlsx
data_visualization/static/: main.js  style.css
data_visualization/templates/: index.html
server_node/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
server_node/src/: main.c
